# localstacker

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTINGmd  Cargo.toml  DEVELOPMENT.md  Makefile  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  install.sh
docs/: MEDIUM_ARTICLE.md
src/: config.rs  error.rs  main.rs  utils.rs
src/commands/: install_mkcert.rs  list.rs  mod.rs  remove.rs  setup.rs
src/core/: file_ops.rs  mkcert.rs  mod.rs  nginx.rs  systemd.rs
src/examples/: custom-template.conf  test_example.rs
