[package]
name = "localstacker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
nix = { version = "0.27", features = ["user"] }

[profile.release]
strip = true
lto = true
codegen-units = 1